# DIShboard

./: .gitmodules  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: .gitignore
docs/source/: autodoc.rst  conf.py  index.rst  ubproject.toml
scripts/: pdu_sender.py
src/: manage.py  sphinx_needs_example.py
src/board/: forms.py  models.py  tasks.py  tests.py  urls.py  views.py
src/board/static/board/: board.css
src/board/templates/: base.html  dashboard.html  ingestion_control.html  partial_blank_centre.html  partial_connection_info.html  partial_dis_live.html  partial_header_content.html  partial_nav.html  partial_pdu_list.html  partial_playback_selection.html  pdu_list.html
src/board/templates/pdus/: partial_detail.html  partial_list.html  partial_pdu_summary.html
src/dishboard/: asgi.py  settings.py  urls.py  wsgi.py
src/pdu_codegen/: pdu_to_detail.xslt  pdu_to_django.xslt  pdu_to_summary.xslt  run_transform.py
tests/: example_test.py
tests/pdu_sender_program/: pdu_sender.py
