[project]
name = "dishboard"
version = "0.1.0"
description = "Distributed Interactive Simulation (DIS) Dashboard"
dependencies = [
    "Django>=6.0",
    "django-htmx",
    "django-tasks-db",
    "opendis",
    "altair",
    "pandas",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "furo",
    "sphinx-needs",
    "sphinx-codelinks",
    "sphinx-autoapi",
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"